# vecnorm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/vecnorm-core/: Cargo.toml  README.md
crates/vecnorm-core/src/: lib.rs
crates/vecnorm-py/: Cargo.toml
crates/vecnorm-py/src/: lib.rs
python/vecnorm/: __init__.py  _native.pyi
tests/python/: test_vecnorm.py
