[workspace]
members = ["crates/vecnorm-core", "crates/vecnorm-py"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mukunda Katta"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/MukundaKatta/vecnorm"
homepage = "https://github.com/MukundaKatta/vecnorm"
documentation = "https://docs.rs/vecnorm-core"
readme = "README.md"
keywords = ["vector", "embeddings", "cosine", "topk", "ndarray"]
categories = ["science", "algorithms"]

[workspace.dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
thiserror = "2.0"

[profile.release]
lto = "thin"
codegen-units = 1
