[package]
name = "vecnorm-py"
description = "PyO3 bindings for vecnorm-core."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
publish = false

[lib]
name = "vecnorm_native"
crate-type = ["cdylib"]

[dependencies]
vecnorm-core = { path = "../vecnorm-core", version = "0.1.1" }
pyo3 = { version = "0.23", features = ["abi3-py310", "extension-module"] }
numpy = "0.23"
ndarray = { workspace = true }
